--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <string name="app_name" translatable="false">familygem</string>
-    <string name="tagline">Create your own family tree</string>
+    <string name="app_name" translatable="false">Otbasym</string>
     <string name="delete">Delete</string>
     <string name="sure_delete">Are you sure?</string>
     <string name="cancel">Cancel</string>
