--- a/app/src/main/res/values-kz/strings.xml
+++ b/app/src/main/res/values-kz/strings.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <string name="sharing_completed">Поделение завершено.</string>
     <string name="sharing_tree">Совместное использование семейного дерева</string>
     <string name="shares">Совместное использование</string>
     <string name="from_to">От… до</string>
@@ -169,9 +168,9 @@
     <string name="burial">Погребение</string>
     <string name="death">Смерть</string>
     <string name="occupation">Профессия</string>
-    <string name="residence">Проживание</string>
-    <string name="kinship">Родство</string>
-    <string name="baptism">Крещение</string>
+    <string name="residence">Туыстық</string>
+    <string name="kinship">Туыстық</string>
+
     <string name="birth">Рождение</string>
     <string name="event">Событие</string>
     <string name="sex">Пол</string>
@@ -355,11 +354,11 @@
     <string name="ex_wife">Бывшая жена</string>
     <string name="ex_husband">Бывший муж</string>
     <string name="ex_spouse">Бывший супруг</string>
-    <string name="ex_female_partner">Бывший партнер-женщина</string>
-    <string name="ex_male_partner">Бывший партнер-мужчина</string>
+    <string name="ex_female_partner">Бывшая жена</string>
+    <string name="ex_male_partner">Бывший муж</string>
     <string name="ex_partner">Бывший партнер</string>
-    <string name="female_partner">Партнер-женщина</string>
-    <string name="male_partner">Партнер-мужчина</string>
+    <string name="female_partner">Жена</string>
+    <string name="male_partner">Муж</string>
     <string name="partner">Партнер</string>
     <string name="age">Возраст</string>
     <string name="uncles_cousins">Дяди и двоюродные братья</string>
